<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kedrad.hoptest.CrossoverHopFragment">
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/op_leg"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1."
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

            <EditText
                android:id="@+id/editTextOp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:digits="0123456789.,"
                android:ems="4"
                android:hint="0"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="cm"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2."
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

            <EditText
                android:id="@+id/editTextOp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="0123456789.,"
                android:ems="4"
                android:hint="0"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="cm"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/nop_leg"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="36sp"
            android:layout_marginTop="150dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="200dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1."
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

            <EditText
                android:id="@+id/editTextNop1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:digits="0123456789.,"
                android:ems="4"
                android:hint="0"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="cm"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="250dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2."
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

            <EditText
                android:id="@+id/editTextNop2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="0123456789.,"
                android:ems="4"
                android:hint="0"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="cm"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="107sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="300dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textColor="@android:color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="425dp" />

    </RelativeLayout>

</ScrollView>
